methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:4: error: not found: value avanec
  droite();avance();droite();avanec();droite();
                             ^